Created category show page

--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -11,7 +11,7 @@
   </div>
 <% end %>
 
-<% if params[:controller] == 'books' && params[:action] == 'index' || 'show' %>
+<% if params[:controller] == 'books' && params[:action] == 'index' || params[:action] == 'show' %>
   <div class="list-group">
     <% @categories.each do |category| %>
       <%= link_to category.name, category_path(category.id), class: 'list-group-item' %>
